package com.java.shop;

public interface IAuthor {
    String getFirstName();

    String getName();

    void setName(String name);

    String getPublisher();

    void setPublisher(String publisher);
}
