package com.java.shop;

import java.util.ArrayList;

public interface IMedia {
    void display();

    double getNetPrice();

    int getId();

    String getTitle();

    double getPrice();

    int getTaux();

    String getGenre();
}
