package com.java.shop;

public interface IMediaRow {
    void add();

    void add(int nb);

    void remove();

    void remove(int nb);
}
