@startuml

title __SHOP's Class Diagram__\n

  package  {
    package com.java.shop {
      class Author {
          - firstName : String
          - name : String
          - publisher : String
          + Author()
          + getFirstName()
          + getName()
          + setName()
          + getPublisher()
          + setPublisher()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class Book {
          - nbPage : int
          - publicationYear : String
          - taux : int
          + Book()
          + getNetPrice()
          + getTaux()
          + display()
          + getNbPage()
          + getPublicationYear()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class BookRepository {
          - bookList : List<Book>
          - uri : String
          + load()
          + getAll()
          + getById()
          + searchByTitle()
          + searchByPrice()
          + addBook()
          + removeBook()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class CD {
          - nbTrack : int
          + CD()
          + display()
          + getNetPrice()
          + getNbTrack()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class Cart {
          - cartRowList : HashSet<MediaRow>
          - totalPriceTTC : double
          + Cart()
          + add()
          + remove()
          - isMediaExists()
          + getTotalPriceTTC()
          + validate()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class CartRow {
          - row : int
          + getMedia()
          + setMedia()
          + add()
          + remove()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class DVD {
          - zone : String
          + DVD()
          + display()
          + getNetPrice()
          + getZone()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface IAuthor {
          {abstract} + getFirstName()
          {abstract} + getName()
          {abstract} + setName()
          {abstract} + getPublisher()
          {abstract} + setPublisher()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface IBook {
          {abstract} + getNetPrice()
          {abstract} + getTaux()
          {abstract} + display()
          {abstract} + getNbPage()
          {abstract} + getPublicationYear()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface ICD {
          {abstract} + display()
          {abstract} + getNetPrice()
          {abstract} + getNbTrack()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface ICart {
          {abstract} + add()
          {abstract} + remove()
          {abstract} + getTotalPriceTTC()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface IDVD {
          {abstract} + display()
          {abstract} + getNetPrice()
          {abstract} + getZone()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface IMedia {
          {abstract} + display()
          {abstract} + getNetPrice()
          {abstract} + getId()
          {abstract} + getTitle()
          {abstract} + getPrice()
          {abstract} + getTaux()
          {abstract} + getGenre()
      }
    }
  }
  

  package  {
    package com.java.shop {
      interface IMediaRow {
          {abstract} + add()
          {abstract} + add()
          {abstract} + remove()
          {abstract} + remove()
      }
    }
  }
  

  package  {
    package com.java.shop {
      abstract class Media {
          - id : int
          - title : String
          - price : double
          - genre : String
          - authorList : List<Author>
          - taux : int
          + Media()
          + Media()
          + display()
          + getId()
          + getTitle()
          + getPrice()
          + getTaux()
          + getGenre()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class MediaException {
          + MediaException()
          + MediaException()
          + MediaException()
      }
    }
  }
  

  package  {
    abstract class PrintStreamOrWriter {
        - PrintStreamOrWriter()
        {abstract} ~ lock()
        {abstract} ~ println()
    }
  }
  

  package  {
    class SentinelHolder {
        {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
        {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
        - SentinelHolder()
    }
  }
  

  package  {
    class WrappedPrintStream {
        - printStream : PrintStream
        ~ WrappedPrintStream()
        ~ lock()
        ~ println()
    }
  }
  

  package  {
    class WrappedPrintWriter {
        - printWriter : PrintWriter
        ~ WrappedPrintWriter()
        ~ lock()
        ~ println()
    }
  }
  

  package  {
    package com.java.shop {
      class MediaRow {
          ~ nbCopies : int
          + MediaRow()
          + add()
          + add()
          + remove()
          + remove()
          + getMedia()
      }
    }
  }
  

  package  {
    package com.java.shop {
      class ProgramShop {
          {static} + main()
      }
    }
  }
  

  Author -up-|> IAuthor
  Book -up-|> IBook
  Book -up-|> Media
  CD -up-|> ICD
  CD -up-|> Media
  Cart -up-|> ICart
  CartRow o-- Media : media
  DVD -up-|> IDVD
  DVD -up-|> Media
  Media -up-|> IMedia
  MediaException +-down- PrintStreamOrWriter
  MediaException +-down- SentinelHolder
  MediaException +-down- WrappedPrintStream
  MediaException +-down- WrappedPrintWriter
  MediaRow -up-|> IMediaRow
  MediaRow o-- Media : media


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
